templates/cluster-tutorial/vnet-linuxcluster.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "vnetName": {
        "defaultValue": "sf-vnet",
        "type": "string"
      },
      "vnetAddressSpace": {
        "defaultValue": "10.0.0.0/16",
        "type": "string"
      },
      "sfSubnetName": {
        "defaultValue": "sf-subnet",
        "type": "string"
      },
      "sfSubnetSpace": {
        "defaultValue": "10.0.2.0/24",
        "type": "string"
      },
      "location": {      
              "type": "string",      
              "defaultValue": "[resourceGroup().location]",      
              "metadata": {      
                "description": "Location of the Cluster"      
              }      
        },
        "clusterName": {
        "type": "string",
        "defaultValue": "sfcluster",
        "metadata": {
          "description": "Name of your cluster - Between 3 and 23 characters. Letters and numbers only"
        }
      },
      "adminUserName": {
        "type": "string",
        "metadata": {
          "description": "Remote desktop user Id"
        }
      },
      "adminPassword": {
        "type": "securestring",
        "metadata": {
          "description": "Remote desktop user password. Must be a strong password"
        }
      },
      "vnetName": {
        "defaultValue": "sf-vnet",
        "type": "string",
        "metadata": {
          "description": "The name of the VNET that contains the Service Fabric cluster and API Management service deployment."
        }
      },
      "vnetVersion": {
        "type": "string",
        "defaultValue": "2017-03-01",
        "metadata": {
          "description": "The version of the VNET resource to which the subnet belongs as defined by the subnetName parameter."
        }
      },
      "subnetName": {
        "type": "string",
        "defaultValue": "sf-subnet",
        "metadata": {
          "description": "The name subnet to deploy the Service Fabric cluster to. This subnet must be in the same VNET that contains the API Management service deployment."
        }
      },
      "networkSecurityGroupName": {
        "type": "string",
        "defaultValue": "sf-vnet-security",
        "metadata": {
          "description": "The name Network Security Group to deploy the Service Fabric cluster to. This NSG must be applied to the subnet in the 'subnetName' parameter."
        }
      },
      "networkSecurityGroupVersion": {
        "type": "string",
        "defaultValue": "2017-03-01",
        "metadata": {
          "description": "The version of the Network Security Group resource."
        }
      },
      "vmImagePublisher": {
        "type": "string",
        "defaultValue": "Canonical",
        "metadata": {
          "description": "VM image Publisher"
        }
      },
      "vmImageOffer": {
        "type": "string",
        "defaultValue": "UbuntuServer",
        "metadata": {
          "description": "VM image offer"
        }
      },
      "vmImageSku": {
        "type": "string",
        "defaultValue": "16.04-LTS",
        "metadata": {
          "description": "VM image SKU"
        }
      },
      "vmImageVersion": {
        "type": "string",
        "defaultValue": "latest",
        "metadata": {
          "description": "VM image version"
        }
      },
      "loadBalancedAppPort1": {
        "type": "int",
        "defaultValue": 80,
        "metadata": {
          "description": "Input endpoint1 for the application to use. Replace it with what your application uses"
        }
      },
      "loadBalancedAppPort2": {
        "type": "int",
        "defaultValue": 8081,
        "metadata": {
          "description": "Input endpoint2 for the application to use. Replace it with what your application uses"
        }
      },
      "certificateStoreValue": {
        "type": "string",
        "allowedValues": [
          "My"
        ],
        "defaultValue": "My",
        "metadata": {
          "description": "The store name where the cert will be deployed in the virtual machine"
        }
      },
      "certificateThumbprint": {
        "type": "string",
        "metadata": {
          "description": "Certificate Thumbprint"
        }
      },
      "sourceVaultValue": {
        "type": "string",
        "metadata": {
          "description": "Resource Id of the key vault, is should be in the format of /subscriptions/<Sub ID>/resourceGroups/<Resource group name>/providers/Microsoft.KeyVault/vaults/<vault name>"
        }
      },
      "certificateUrlValue": {
        "type": "string",
        "metadata": {
          "description": "Refers to the location URL in your key vault where the certificate was uploaded, it is should be in the format of https://<name of the vault>.vault.azure.net:443/secrets/<exact location>"
        }
      },
      "clusterProtectionLevel": {
        "type": "string",
        "allowedValues": [
          "None",
          "Sign",
          "EncryptAndSign"
        ],
        "defaultValue": "EncryptAndSign",
        "metadata": {
          "description": "Protection level.Three values are allowed - EncryptAndSign, Sign, None. It is best to keep the default of EncryptAndSign, unless you have a need not to"
        }
      },
      "storageAccountType": {
        "type": "string",
        "allowedValues": [
          "Standard_LRS",
          "Standard_GRS"
        ],
        "defaultValue": "Standard_LRS",
        "metadata": {
          "description": "Replication option for the VM image storage account"
        }
      },
      "supportLogStorageAccountType": {
        "type": "string",
        "allowedValues": [
          "Standard_LRS",
          "Standard_GRS"
        ],
        "defaultValue": "Standard_LRS",
        "metadata": {
          "description": "Replication option for the support log storage account"
        }
      },
      "applicationDiagnosticsStorageAccountType": {
        "type": "string",
        "allowedValues": [
          "Standard_LRS",
          "Standard_GRS"
        ],
        "defaultValue": "Standard_LRS",
        "metadata": {
          "description": "Replication option for the application diagnostics storage account"
        }
      },
      "nt0InstanceCount": {
        "type": "int",
        "defaultValue": 5,
        "metadata": {
          "description": "Instance count for node type"
        }
      }
    },
    "variables": {
      "location": "[parameters('location')]",
      "vnetApiVersion": "2017-03-01",
      "sgApiVersion": "2017-03-01",
      "dnsName": "[parameters('clusterName')]",
      "vmStorageAccountName": "[toLower(concat(uniqueString(resourceGroup().id), '1' ))]",
      "vmName": "vm",
      "publicIPAddressName": "PublicIP-VM",
      "publicIPAddressType": "Dynamic",
      "vmStorageAccountContainerName": "vhds",
      "nicName": "NIC",
      "lbName": "LoadBalancer",
      "lbIPName": "PublicIP-LB-FE",
      "availSetName": "AvailabilitySet",
      "maxPercentUpgradeDomainDeltaUnhealthyNodes": "100",
      "vnetID": "[resourceId('Microsoft.Network/virtualNetworks',parameters('vnetName'))]",
      "subnetId": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('subnetName'))]",
      "overProvision": "false",
      "vmssApiVersion": "2017-03-30",
      "sfrpApiVersion": "2017-07-01-preview",
      "lbApiVersion": "2015-06-15",
      "vNetApiVersion": "2015-06-15",
      "storageApiVersion": "2016-01-01",
      "publicIPApiVersion": "2015-06-15",
      "nt0applicationStartPort": "20000",
      "nt0applicationEndPort": "30000",
      "nt0ephemeralStartPort": "49152",
      "nt0ephemeralEndPort": "65534",
      "nt0fabricTcpGatewayPort": "19000",
      "nt0fabricHttpGatewayPort": "19080",
      "supportLogStorageAccountName": "[toLower( concat( uniqueString(resourceGroup().id),'2'))]",
      "applicationDiagnosticsStorageAccountName": "[toLower(concat(uniqueString(resourceGroup().id), '3' ))]",
      "lbID0": "[resourceId('Microsoft.Network/loadBalancers',concat('LB','-', parameters('clusterName'),'-',variables('vmNodeType0Name')))]",
      "lbIPConfig0": "[concat(variables('lbID0'),'/frontendIPConfigurations/LoadBalancerIPConfig')]",
      "lbPoolID0": "[concat(variables('lbID0'),'/backendAddressPools/LoadBalancerBEAddressPool')]",
      "lbProbeID0": "[concat(variables('lbID0'),'/probes/FabricGatewayProbe')]",
      "lbHttpProbeID0": "[concat(variables('lbID0'),'/probes/FabricHttpGatewayProbe')]",
      "lbNatPoolID0": "[concat(variables('lbID0'),'/inboundNatPools/LoadBalancerBEAddressNatPool')]",
      "vmNodeType0Name": "[toLower(concat('NT1', variables('vmName')))]",
      "vmNodeType0Size": "Standard_D2_v2",
      "vmStorageAccountName0": "[toLower(concat(uniqueString(resourceGroup().id), '1', '0' ))]",
      "uniqueStringArray0": [
        "[concat(variables('vmStorageAccountName0'), '0')]",
        "[concat(variables('vmStorageAccountName0'), '1')]",
        "[concat(variables('vmStorageAccountName0'), '2')]",
        "[concat(variables('vmStorageAccountName0'), '3')]",
        "[concat(variables('vmStorageAccountName0'), '4')]"
      ],
      "wadlogs": "<WadCfg><DiagnosticMonitorConfiguration>",
      "wadperfcounters1": "<PerformanceCounters scheduledTransferPeriod=\"PT1M\"><PerformanceCounterConfiguration counterSpecifier=\"\\Memory\\AvailableMemory\" sampleRate=\"PT15S\" unit=\"Bytes\"><annotation displayName=\"Memory available\" locale=\"en-us\"/></PerformanceCounterConfiguration><PerformanceCounterConfiguration counterSpecifier=\"\\Memory\\PercentAvailableMemory\" sampleRate=\"PT15S\" unit=\"Percent\"><annotation displayName=\"Mem. percent available\" locale=\"en-us\"/></Performanc [...]
      "wadperfcounters2": "<PerformanceCounterConfiguration counterSpecifier=\"\\PhysicalDisk\\BytesPerSecond\" sampleRate=\"PT15S\" unit=\"BytesPerSecond\"><annotation displayName=\"Disk total bytes\" locale=\"en-us\"/></PerformanceCounterConfiguration><PerformanceCounterConfiguration counterSpecifier=\"\\PhysicalDisk\\ReadBytesPerSecond\" sampleRate=\"PT15S\" unit=\"BytesPerSecond\"><annotation displayName=\"Disk read guest OS\" locale=\"en-us\"/></PerformanceCounterConfiguration><PerformanceC [...]
      "wadcfgxstart": "[concat(variables('wadlogs'),variables('wadperfcounters1'),variables('wadperfcounters2'),'<Metrics resourceId=\"')]",
      "wadcfgxend": "[concat('\"><MetricAggregation scheduledTransferPeriod=\"PT1H\"/><MetricAggregation scheduledTransferPeriod=\"PT1M\"/></Metrics></DiagnosticMonitorConfiguration></WadCfg>')]",
      "wadmetricsresourceid0": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().name ,'/providers/','Microsoft.Compute/virtualMachineScaleSets/', variables('vmNodeType0Name'))]"
    },
    "resources": [
      {
        "type": "Microsoft.Network/virtualNetworks",
        "name": "[parameters('vnetName')]",
        "apiVersion": "[variables('vnetApiversion')]",
        "location": "[variables('location')]",
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "[parameters('vnetAddressSpace')]"
            ]
          },
          "subnets": [            
            {
              "name": "[parameters('sfSubnetName')]",
              "properties": {
                "addressPrefix": "[parameters('sfSubnetSpace')]",
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName'))]"
                }
              }
            }
          ],
          "virtualNetworkPeerings": []
        },
        "dependsOn": [
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName'))]"
        ]
      },
      {
        "apiVersion": "[variables('storageApiVersion')]",
        "type": "Microsoft.Storage/storageAccounts",
        "name": "[variables('supportLogStorageAccountName')]",
        "location": "[variables('location')]",
        "dependsOn": [],
        "properties": {},
        "kind": "Storage",
        "sku": {
          "name": "[parameters('supportLogStorageAccountType')]"
        },
        "tags": {
          "resourceType": "Service Fabric",
          "clusterName": "[parameters('clusterName')]"
        }
      },
      {
        "apiVersion": "[variables('storageApiVersion')]",
        "type": "Microsoft.Storage/storageAccounts",
        "name": "[variables('applicationDiagnosticsStorageAccountName')]",
        "location": "[variables('location')]",
        "dependsOn": [],
        "properties": {},
        "kind": "Storage",
        "sku": {
          "name": "[parameters('applicationDiagnosticsStorageAccountType')]"
        },
        "tags": {
          "resourceType": "Service Fabric",
          "clusterName": "[parameters('clusterName')]"
        }
      },
      {
        "apiVersion": "[variables('publicIPApiVersion')]",
        "type": "Microsoft.Network/publicIPAddresses",
        "name": "[concat(variables('lbIPName'),'-','0')]",
        "location": "[variables('location')]",
        "properties": {
          "dnsSettings": {
            "domainNameLabel": "[variables('dnsName')]"
          },
          "publicIPAllocationMethod": "Dynamic"
        },
        "tags": {
          "resourceType": "Service Fabric",
          "clusterName": "[parameters('clusterName')]"
        }
      },
      {
        "apiVersion": "[variables('lbApiVersion')]",
        "type": "Microsoft.Network/loadBalancers",
        "name": "[concat('LB','-', parameters('clusterName'),'-',variables('vmNodeType0Name'))]",
        "location": "[variables('location')]",
        "dependsOn": [
          "[concat('Microsoft.Network/publicIPAddresses/',concat(variables('lbIPName'),'-','0'))]"
        ],
        "properties": {
          "frontendIPConfigurations": [
            {
              "name": "LoadBalancerIPConfig",
              "properties": {
                "publicIPAddress": {
                  "id": "[resourceId('Microsoft.Network/publicIPAddresses',concat(variables('lbIPName'),'-','0'))]"
                }
              }
            }
          ],
          "backendAddressPools": [
            {
              "name": "LoadBalancerBEAddressPool",
              "properties": {}
            }
          ],
          "loadBalancingRules": [
            {
              "name": "LBRule",
              "properties": {
                "backendAddressPool": {
                  "id": "[variables('lbPoolID0')]"
                },
                "backendPort": "[variables('nt0fabricTcpGatewayPort')]",
                "enableFloatingIP": "false",
                "frontendIPConfiguration": {
                  "id": "[variables('lbIPConfig0')]"
                },
                "frontendPort": "[variables('nt0fabricTcpGatewayPort')]",
                "idleTimeoutInMinutes": "5",
                "probe": {
                  "id": "[variables('lbProbeID0')]"
                },
                "protocol": "tcp"
              }
            },
            {
              "name": "LBHttpRule",
              "properties": {
                "backendAddressPool": {
                  "id": "[variables('lbPoolID0')]"
                },
                "backendPort": "[variables('nt0fabricHttpGatewayPort')]",
                "enableFloatingIP": "false",
                "frontendIPConfiguration": {
                  "id": "[variables('lbIPConfig0')]"
                },
                "frontendPort": "[variables('nt0fabricHttpGatewayPort')]",
                "idleTimeoutInMinutes": "5",
                "probe": {
                  "id": "[variables('lbHttpProbeID0')]"
                },
                "protocol": "tcp"
              }
            },
            {
              "name": "AppPortLBRule1",
              "properties": {
                "backendAddressPool": {
                  "id": "[variables('lbPoolID0')]"
                },
                "backendPort": "[parameters('loadBalancedAppPort1')]",
                "enableFloatingIP": "false",
                "frontendIPConfiguration": {
                  "id": "[variables('lbIPConfig0')]"
                },
                "frontendPort": "[parameters('loadBalancedAppPort1')]",
                "idleTimeoutInMinutes": "5",
                "probe": {
                  "id": "[concat(variables('lbID0'),'/probes/AppPortProbe1')]"
                },
                "protocol": "tcp"
              }
            },
            {
              "name": "AppPortLBRule2",
              "properties": {
                "backendAddressPool": {
                  "id": "[variables('lbPoolID0')]"
                },
                "backendPort": "[parameters('loadBalancedAppPort2')]",
                "enableFloatingIP": "false",
                "frontendIPConfiguration": {
                  "id": "[variables('lbIPConfig0')]"
                },
                "frontendPort": "[parameters('loadBalancedAppPort2')]",
                "idleTimeoutInMinutes": "5",
                "probe": {
                  "id": "[concat(variables('lbID0'),'/probes/AppPortProbe2')]"
                },
                "protocol": "tcp"
              }
            }
          ],
          "probes": [
            {
              "name": "FabricGatewayProbe",
              "properties": {
                "intervalInSeconds": 5,
                "numberOfProbes": 2,
                "port": "[variables('nt0fabricTcpGatewayPort')]",
                "protocol": "tcp"
              }
            },
            {
              "name": "FabricHttpGatewayProbe",
              "properties": {
                "intervalInSeconds": 5,
                "numberOfProbes": 2,
                "port": "[variables('nt0fabricHttpGatewayPort')]",
                "protocol": "tcp"
              }
            },
            {
              "name": "AppPortProbe1",
              "properties": {
                "intervalInSeconds": 5,
                "numberOfProbes": 2,
                "port": "[parameters('loadBalancedAppPort1')]",
                "protocol": "tcp"
              }
            },
            {
              "name": "AppPortProbe2",
              "properties": {
                "intervalInSeconds": 5,
                "numberOfProbes": 2,
                "port": "[parameters('loadBalancedAppPort2')]",
                "protocol": "tcp"
              }
            }
          ],
          "inboundNatPools": [
            {
              "name": "LoadBalancerBEAddressNatPool",
              "properties": {
                "backendPort": "22",
                "frontendIPConfiguration": {
                  "id": "[variables('lbIPConfig0')]"
                },
                "frontendPortRangeEnd": "4500",
                "frontendPortRangeStart": "3389",
                "protocol": "tcp"
              }
            }
          ]
        },
        "tags": {
          "resourceType": "Service Fabric",
          "clusterName": "[parameters('clusterName')]"
        }
      },
      {
        "apiVersion": "[variables('storageApiVersion')]",
        "type": "Microsoft.Storage/storageAccounts",
        "name": "[variables('uniqueStringArray0')[copyIndex()]]",
        "location": "[variables('location')]",
        "dependsOn": [],
        "properties": {},
        "copy": {
          "name": "storageLoop",
          "count": 5
        },
        "kind": "Storage",
        "sku": {
          "name": "[parameters('storageAccountType')]"
        },
        "tags": {
          "resourceType": "Service Fabric",
          "clusterName": "[parameters('clusterName')]"
        }
      },
      {
        "apiVersion": "[parameters('networkSecurityGroupVersion')]",
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[parameters('networkSecurityGroupName')]",
        "location": "[variables('location')]",
        "properties": {
          "securityRules": [
            {
              "name": "allowServiceFabricSMB",
              "properties": {
                "access": "Allow",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "445",
                "direction": "Inbound",
                "priority": 3950,
                "protocol": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "sourcePortRange": "*"
              }
            },
            {
              "name": "allowServiceFabricCluser",
              "properties": {
                "access": "Allow",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "1025-1027",
                "direction": "Inbound",
                "priority": 3920,
                "protocol": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "sourcePortRange": "*"
              }
            },
            {
              "name": "allowServiceFabricEphemeral",
              "properties": {
                "access": "Allow",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "[concat(variables('nt0ephemeralStartPort'), '-', variables('nt0ephemeralEndPort'))]",
                "direction": "Inbound",
                "priority": 3930,
                "protocol": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "sourcePortRange": "*"
              }
            },
            {
              "name": "allowServiceFabricPortal",
              "properties": {
                "access": "Allow",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "[variables('nt0fabricHttpGatewayPort')]",
                "direction": "Inbound",
                "priority": 3900,
                "protocol": "*",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*"
              }
            },
            {
              "name": "allowServiceFabricClient",
              "properties": {
                "access": "Allow",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "[variables('nt0fabricTcpGatewayPort')]",
                "direction": "Inbound",
                "priority": 3910,
                "protocol": "*",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*"
              }
            },
            {
              "name": "allowServiceFabricApplication",
              "properties": {
                "access": "Allow",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "[concat(variables('nt0applicationStartPort'), '-', variables('nt0applicationEndPort'))]",
                "direction": "Inbound",
                "priority": 3940,
                "protocol": "*",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*"
              }
            },
            {
              "name": "allowServiceFabricSystemServices",
              "properties": {
                "access": "Allow",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "[concat(variables('nt0fabricTcpGatewayPort'), '-', variables('nt0fabricHttpGatewayPort'))]",
                "direction": "Inbound",
                "priority": 3810,
                "protocol": "*",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*"
              }
            },
            {  
              "name": "allowAppPort1",  
              "properties": {  
                "access": "Allow",  
                "destinationAddressPrefix": "*",  
                "destinationPortRange": "[parameters('loadBalancedAppPort1')]",  
                "direction": "Inbound",  
                "priority": 2001,  
                "protocol": "*",  
                "sourceAddressPrefix": "*",  
                "sourcePortRange": "*"  
              }  
            },  
            {  
              "name": "allowAppPort2",  
              "properties": {  
                "access": "Allow",  
                "destinationAddressPrefix": "*",  
                "destinationPortRange": "[parameters('loadBalancedAppPort2')]",  
                "direction": "Inbound",  
                "priority": 2002,  
                "protocol": "*",  
                "sourceAddressPrefix": "*",  
                "sourcePortRange": "*"  
              }
            },
            {
              "name": "allowVNetRDP",
              "properties": {
                "access": "Allow",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "3389-4500",
                "direction": "Inbound",
                "priority": 3960,
                "protocol": "*",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*"
              }
            },
            {
              "name": "allowAll",
              "properties": {
                "access": "Allow",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "*",
                "direction": "Outbound",
                "priority": 100,
                "protocol": "*",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*"
              }
            }
          ]
        },
        "tags": {
          "resourceType": "Service Fabric",
          "clusterName": "[parameters('clusterName')]"
        }
      },
      {
        "apiVersion": "[variables('vmssApiVersion')]",
        "type": "Microsoft.Compute/virtualMachineScaleSets",
        "name": "[variables('vmNodeType0Name')]",
        "location": "[variables('location')]",
        "dependsOn": [
          "[concat('Microsoft.Storage/storageAccounts/', variables('uniqueStringArray0')[0])]",
          "[concat('Microsoft.Storage/storageAccounts/', variables('uniqueStringArray0')[1])]",
          "[concat('Microsoft.Storage/storageAccounts/', variables('uniqueStringArray0')[2])]",
          "[concat('Microsoft.Storage/storageAccounts/', variables('uniqueStringArray0')[3])]",
          "[concat('Microsoft.Storage/storageAccounts/', variables('uniqueStringArray0')[4])]",
          "[concat('Microsoft.Network/loadBalancers/', concat('LB','-', parameters('clusterName'),'-',variables('vmNodeType0Name')))]",
          "[concat('Microsoft.Storage/storageAccounts/', variables('supportLogStorageAccountName'))]",
          "[concat('Microsoft.Storage/storageAccounts/', variables('applicationDiagnosticsStorageAccountName'))]"
        ],
        "properties": {
          "overprovision": "[variables('overProvision')]",
          "upgradePolicy": {
            "mode": "Automatic"
          },
          "virtualMachineProfile": {
            "extensionProfile": {
              "extensions": [
                {
                  "name": "[concat(variables('vmNodeType0Name'),'_ServiceFabricLinuxNode')]",
                  "properties": {
                    "type": "ServiceFabricLinuxNode",
                    "autoUpgradeMinorVersion": true,
                    "protectedSettings": {
                      "StorageAccountKey1": "[listKeys(resourceId('Microsoft.Storage/storageAccounts', variables('supportLogStorageAccountName')),'2015-05-01-preview').key1]",
                      "StorageAccountKey2": "[listKeys(resourceId('Microsoft.Storage/storageAccounts', variables('supportLogStorageAccountName')),'2015-05-01-preview').key2]"
                    },
                    "publisher": "Microsoft.Azure.ServiceFabric",
                    "settings": {
                      "clusterEndpoint": "[reference(parameters('clusterName')).clusterEndpoint]",
                      "nodeTypeRef": "[variables('vmNodeType0Name')]",
                      "durabilityLevel": "Bronze",
                      "enableParallelJobs": true,
                      "nicPrefixOverride": "[reference(variables('subnetId'), parameters('vnetVersion')).addressPrefix]",
                      "certificate": {
                        "thumbprint": "[parameters('certificateThumbprint')]",
                        "x509StoreName": "[parameters('certificateStoreValue')]"
                      }
                    },
                    "typeHandlerVersion": "1.0"
                  }
                },
                {
                  "name": "[concat('VMDiagnosticsVmExt','_vmNodeType0Name')]",
                  "properties": {
                    "type": "LinuxDiagnostic",
                    "autoUpgradeMinorVersion": true,
                    "protectedSettings": {
                      "storageAccountName": "[variables('applicationDiagnosticsStorageAccountName')]",
                      "storageAccountKey": "[listKeys(resourceId('Microsoft.Storage/storageAccounts', variables('applicationDiagnosticsStorageAccountName')),'2015-05-01-preview').key1]",
                      "storageAccountEndPoint": "https://core.windows.net/"
                    },
                    "publisher": "Microsoft.OSTCExtensions",
                    "settings": {
                      "xmlCfg": "[base64(concat(variables('wadcfgxstart'),variables('wadmetricsresourceid0'),variables('wadcfgxend')))]",
                      "StorageAccount": "[variables('applicationDiagnosticsStorageAccountName')]"
                  },
                  "typeHandlerVersion": "2.3"
                  }
                }
              ]
            },
            "networkProfile": {
              "networkInterfaceConfigurations": [
                {
                  "name": "[concat(variables('nicName'), '-0')]",
                  "properties": {
                    "ipConfigurations": [
                      {
                        "name": "[concat(variables('nicName'),'-',0)]",
                        "properties": {
                          "loadBalancerBackendAddressPools": [
                            {
                              "id": "[variables('lbPoolID0')]"
                            }
                          ],
                          "loadBalancerInboundNatPools": [
                            {
                              "id": "[variables('lbNatPoolID0')]"
                            }
                          ],
                          "subnet": {
                            "id": "[variables('subnetId')]"
                          }
                        }
                      }
                    ],
                    "primary": true
                  }
                }
              ]
            },
            "osProfile": {
              "adminPassword": "[parameters('adminPassword')]",
              "adminUsername": "[parameters('adminUsername')]",
              "computernamePrefix": "[variables('vmNodeType0Name')]",
              "secrets": [
                {
                  "sourceVault": {
                    "id": "[parameters('sourceVaultValue')]"
                  },
                  "vaultCertificates": [
                    {
                      "certificateUrl": "[parameters('certificateUrlValue')]"
                    }
                  ]
                }
              ]
            },
            "storageProfile": {
              "imageReference": {
                "publisher": "[parameters('vmImagePublisher')]",
                "offer": "[parameters('vmImageOffer')]",
                "sku": "[parameters('vmImageSku')]",
                "version": "[parameters('vmImageVersion')]"
              },
              "osDisk": {
                "vhdContainers": [
                  "[concat(reference(concat('Microsoft.Storage/storageAccounts/', variables('uniqueStringArray0')[0]), variables('storageApiVersion')).primaryEndpoints.blob, variables('vmStorageAccountContainerName'))]",
                  "[concat(reference(concat('Microsoft.Storage/storageAccounts/', variables('uniqueStringArray0')[1]), variables('storageApiVersion')).primaryEndpoints.blob, variables('vmStorageAccountContainerName'))]",
                  "[concat(reference(concat('Microsoft.Storage/storageAccounts/', variables('uniqueStringArray0')[2]), variables('storageApiVersion')).primaryEndpoints.blob, variables('vmStorageAccountContainerName'))]",
                  "[concat(reference(concat('Microsoft.Storage/storageAccounts/', variables('uniqueStringArray0')[3]), variables('storageApiVersion')).primaryEndpoints.blob, variables('vmStorageAccountContainerName'))]",
                  "[concat(reference(concat('Microsoft.Storage/storageAccounts/', variables('uniqueStringArray0')[4]), variables('storageApiVersion')).primaryEndpoints.blob, variables('vmStorageAccountContainerName'))]"
                ],
                "name": "vmssosdisk",
                "caching": "ReadOnly",
                "createOption": "FromImage"
              }
            }
          }
        },
        "sku": {
          "name": "[variables('vmNodeType0Size')]",
          "capacity": "[parameters('nt0InstanceCount')]",
          "tier": "Standard"
        },
        "tags": {
          "resourceType": "Service Fabric",
          "clusterName": "[parameters('clusterName')]"
        }
      },
      {
        "apiVersion": "[variables('sfrpApiVersion')]",
        "type": "Microsoft.ServiceFabric/clusters",
        "name": "[parameters('clusterName')]",
        "location": "[variables('location')]",
        "dependsOn": [
          "[concat('Microsoft.Storage/storageAccounts/', variables('supportLogStorageAccountName'))]"
        ],
        "properties": {
          "certificate": {
            "thumbprint": "[parameters('certificateThumbprint')]",
            "x509StoreName": "[parameters('certificateStoreValue')]"
          },
          "clientCertificateCommonNames": [],
          "clientCertificateThumbprints": [],
          "clusterState": "Default",
          "diagnosticsStorageAccountConfig": {
            "blobEndpoint": "[reference(concat('Microsoft.Storage/storageAccounts/', variables('supportLogStorageAccountName')), variables('storageApiVersion')).primaryEndpoints.blob]",
            "protectedAccountKeyName": "StorageAccountKey1",
            "queueEndpoint": "[reference(concat('Microsoft.Storage/storageAccounts/', variables('supportLogStorageAccountName')), variables('storageApiVersion')).primaryEndpoints.queue]",
            "storageAccountName": "[variables('supportLogStorageAccountName')]",
            "tableEndpoint": "[reference(concat('Microsoft.Storage/storageAccounts/', variables('supportLogStorageAccountName')), variables('storageApiVersion')).primaryEndpoints.table]"
          },
          "fabricSettings": [
            {
              "parameters": [
                {
                  "name": "ClusterProtectionLevel",
                  "value": "[parameters('clusterProtectionLevel')]"
                }
              ],
              "name": "Security"
            }
          ],
          "managementEndpoint": "[concat('https://',reference(concat(variables('lbIPName'),'-','0')).dnsSettings.fqdn,':',variables('nt0fabricHttpGatewayPort'))]",
          "nodeTypes": [
            {
              "name": "[variables('vmNodeType0Name')]",
              "applicationPorts": {
                "endPort": "[variables('nt0applicationEndPort')]",
                "startPort": "[variables('nt0applicationStartPort')]"
              },
              "clientConnectionEndpointPort": "[variables('nt0fabricTcpGatewayPort')]",
              "durabilityLevel": "Bronze",
              "ephemeralPorts": {
                "endPort": "[variables('nt0ephemeralEndPort')]",
                "startPort": "[variables('nt0ephemeralStartPort')]"
              },
              "httpGatewayEndpointPort": "[variables('nt0fabricHttpGatewayPort')]",
              "isPrimary": true,
              "vmInstanceCount": "[parameters('nt0InstanceCount')]"
            }
          ],
          "provisioningState": "Default",
          "reliabilityLevel": "Silver",
          "upgradeMode": "Automatic",
          "vmImage": "Linux"
        },
        "tags": {
          "resourceType": "Service Fabric",
          "clusterName": "[parameters('clusterName')]"
        }
      }
    ],
    "outputs": {
      "vnet": {
        "type": "object",
        "value": "[reference(parameters('vnetName'))]"
      },
      "vnetVersion": {
        "type": "string",
        "value": "[variables('vnetApiVersion')]"
      },
      "vnetName": {
        "type": "string",
        "value": "[parameters('vnetName')]"
      },
      "sgVersion": {
        "type": "string",
        "value": "[variables('sgApiVersion')]"
      },
      "sfSubnetName": {
        "type": "string",
        "value": "[parameters('sfSubnetName')]"
      },
      "sfSgName": {
        "type": "string",
        "value": "[parameters('networkSecurityGroupName')]"
      },
      "clusterProperties": {
        "value": "[reference(parameters('clusterName'))]",
        "type": "object"
      }
    }
  }
